Bug 1167982 - Do charset detection for all text/* attachments in composition, not just text/plain. r=aceman